# tracely

./: .gitignore  LICENSE  README.md  install_osrm.sh  install_tracely.sh  pyproject.toml
docs/: functions_documentation.md
example_results/: clean_trace_payload.json  stop_summary.json
examples/: stop_summary_example.py  trace_cleaning_example.py
src/tracely/: constants.py
src/tracely.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tracely/exceptions/: custom_exceptions.py  error_messages.py
src/tracely/utils/: data_validation_utils.py  input_output_utils.py  osrm_utils.py  plotting_utils.py
tests/: test_output_validation_script.py  test_script.py  test_tracely_method_combinations.py  testing_utils.py
tests/test_payloads/: dummy_csv_file.csv  dummy_trace_input_payload.json
