[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracely"
version = "1.0.0"
description = "A Python package for trace data processing."
authors = [{ name = "tracely@delhivery.com", email = "tracely@delhivery.com" }]
license = { file = "LICENSE.txt" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPL-3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "folium==0.17.0",
    "haversine==2.8.1",
    "infostop==0.1.9",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "polyline==2.0.2",
    "pytest==8.3.2",
    "requests==2.32.3"
]